Fix the screen height issue on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -32,12 +32,6 @@ body::-webkit-scrollbar {
   position: relative;
 }
 
-@media only screen and (max-width: 770px) {
-  .pageContainer {
-    height: 90vh;
-  }
-}
-
 .sectionContainer {
   display: flex;
   flex-flow: row wrap;
